- [x]  import axios - [x]  import useEffect - [x]  write get request - [x]  comment out get while having server issues so you can style grid - [x]  fix desktop styling and grid spacing

--- a/src/components/warehouseList/warehouseList.scss
+++ b/src/components/warehouseList/warehouseList.scss
@@ -9,7 +9,6 @@
     background-color: variables.$light-color;
     border-radius: 5px;
     padding: 1rem;
-    // justify-content: center;
     box-sizing: border-box;
 
     .header__wrap {
@@ -51,6 +50,14 @@
             padding: .5rem .5rem 0 .5rem;
             text-align: left;
 
+            img {
+                font-size: 11px;
+                line-height: 16px;
+                height: 1rem;
+                width: 1rem;
+            }
+
+
             table {
 
                 thead {
@@ -90,12 +97,6 @@
                             margin-bottom: 1rem;
 
 
-                            img {
-                                font-size: 11px;
-                                line-height: 16px;
-                                height: 1rem;
-                                width: 1rem;
-                            }
                         }
 
 
@@ -108,40 +109,15 @@
         }
     }
 
-    // .warehouse__list--tabdesc {
-    //     display: none !important;
-
-    //     .warehouse__list--item {
-    //         display: none;
-
-    //         table {
-    //             table-layout: fixed;
-    //             border-collapse: collapse;
-    //             display: none !important;
-
-    //             thead {
-    //                 display: none;
-
-    //                 th {
-    //                     display: none;
-    //                     overflow: hidden;
-    //                 }
-    //             }
-
-    //             tbody {
-    //                 display: none;
-    //             }
-    //         }
-    //     }
-    // }
+    .warehouse__list--tabdesc {
+        display: none;
+    }
 
     @include tablet {
         display: flex;
         flex-direction: column;
         background-color: variables.$light-color;
-        border-radius: 5px;
         padding: 1rem;
-        box-sizing: border-box;
 
         .header__wrap {
             display: flex;
@@ -153,21 +129,15 @@
             }
 
             input {
-                border-radius: 22px;
                 margin: 2rem 0 0 4rem;
                 padding: .25rem;
-                border-color: variables.$secondary-border-color;
                 font-size: 12px;
                 height: 1.5rem;
             }
 
             button {
-                border-radius: 22px;
                 margin: 2rem 0 0 .5rem;
                 padding: .4rem;
-                background-color: variables.$primary-interactive-color;
-                color: variables.$light-color;
-                border: none;
                 font-size: 12px;
                 height: 1.5rem;
 
@@ -183,6 +153,7 @@
 
         .warehouse__list--tabdesc {
             background-color: variables.$light-color;
+            display: flex;
 
             .warehouse__grid--container {
                 display: grid;
@@ -191,6 +162,7 @@
 
                 .grid__header--wrap {
                     display: flex;
+                    padding-left: 1rem;
                     grid-column: 1 / span 5;
                     background-color: variables.$primary-background-color;
 
@@ -199,15 +171,10 @@
                         font-size: 11px;
                         line-height: 16px;
                         color: variables.$secondary-text-color;
-                        margin: .5rem 0 .25rem 0;
+                        margin: .5rem 0 0 0;
 
                     }
                 }
-
-                // p {
-
-                // }
-
 
                 .warehouse__list--item {
                     display: flex;
@@ -217,14 +184,12 @@
                     p {
                         width: 7rem;
                         font-size: 11px;
-                        // margin: 0 0 .25rem 0;
 
                     }
 
                     a {
                         font-size: 11px;
                         line-height: 16px;
-                        // margin: 0 0 .25rem 0;
                         justify-self: center;
 
                     }
@@ -232,8 +197,6 @@
                     img {
                         font-size: 11px;
                         line-height: 16px;
-                        // height: 1rem;
-                        // width: 1rem;
                     }
                 }
             }
@@ -241,7 +204,7 @@
     }        
 
     @include desktop {
-        width: 55rem;
+        width: 52rem;
         display: flex;
         justify-content: center;
 
@@ -250,44 +213,37 @@
             flex-direction: row;
 
             h1 {
-                margin: .5rem .5rem .5rem 0;
+                margin: .5rem;
                 font-size: 50px;
             }
 
             input {
-                border-radius: 22px;
-                margin: 2rem 0 0 4rem;
+                margin: 2rem 0 0 20rem;
                 padding: .25rem;
-                border-color: variables.$secondary-border-color;
                 font-size: 12px;
                 height: 1.5rem;
             }
 
             button {
-                border-radius: 22px;
                 margin: 2rem 0 0 .5rem;
                 padding: .4rem;
-                background-color: variables.$primary-interactive-color;
-                color: variables.$light-color;
-                border: none;
                 font-size: 12px;
                 height: 1.5rem;
-
-
             }
-
         }
 
         .warehouse__list--tabdesc {
             background-color: variables.$light-color;
 
             .warehouse__grid--container {
+                margin-left: 1rem;
                 display: grid;
-                grid-template-columns: 7rem 7rem 7rem 7rem 7rem;
-                grid-template-rows: 2rem 2rem 2rem 2rem 2rem;
+                grid-template-columns: 8rem 8rem 8rem 8rem 5rem;
+                grid-template-rows: 3rem 3rem 3rem 3rem 3rem;
 
                 .grid__header--wrap {
                     display: flex;
+                    padding: 0 1rem 0 1rem;
                     grid-column: 1 / span 5;
                     background-color: variables.$primary-background-color;
 
@@ -296,36 +252,41 @@
                         font-size: 11px;
                         line-height: 16px;
                         color: variables.$secondary-text-color;
-                        margin: .5rem 0 .25rem 0;
+                        margin: .5rem 0 0 0;
 
                     }
                 }
 
                 .warehouse__list--item {
                     display: flex;
+                    padding: 0 1rem 0 1rem;
                     grid-column: 1 / span 5;
                     border-bottom: 1px solid variables.$secondary-border-color;
 
                     p {
-                        width: 7rem;
+                        width: 8rem;
                         font-size: 11px;
-                        // margin: 0 0 .25rem 0;
 
                     }
 
                     a {
                         font-size: 11px;
                         line-height: 16px;
-                        // margin: 0 0 .25rem 0;
+                        margin: 0.5rem 0 .25rem 0;
                         justify-self: center;
-
+                        width: 8rem;
                     }
 
                     img {
                         font-size: 11px;
                         line-height: 16px;
-                        // height: 1rem;
-                        // width: 1rem;
+                        height: 1rem;
+                        width: 1rem;
+                    }
+
+                    .button__wrap {
+                        width: 8rem;
+
                     }
                 }
             }
